task #11855 - Implement OIDC authentication and authorization using Keycloak - moving users entirely to keycloak, removing any user tables from DB